syntax = "proto3";
package advisor;

service AdvisorService {
	rpc sendMessage(ContactRequest) returns (ContactResponse) {}
}

message ContactRequest {
    string customerNr = 1;
	string message = 2;
}

message ContactResponse {
	string message = 1;
}